Bug 1919550 - LSNG: Add support for pausing QM IO thread after finishing database initialization; r=dom-storage-reviewers,asuth
Differential Revision: https://phabricator.services.mozilla.com/D220480

UltraBlame original commit: dea9817c09c2726332ff4f5ba001050e04b76702

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -26668,6 +26668,40 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+slow
+down
+database
+initialization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+storage
+.
+databaseInitialization
+.
+pauseOnIOThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
 For
 area
 and
