Bug 1316571 Throttle sending of late decoded frames to the compositor instead of dropping all such frames r=media-playback-reviewers,padenot
This is similar to the proposal in
https://bugzilla.mozilla.org/show_bug.cgi?id=1349679#c3

Enough frames are reported dropped while still advancing the video so that
Firefox playback does not look completely broken.

Differential Revision: https://phabricator.services.mozilla.com/D223699

UltraBlame original commit: 350dd52bcff4659ad56cc51bd4ad215a871d8b2c

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -63362,7 +63362,7 @@ this
 #
 situation
 but
-the
+some
 out
 -
 of
@@ -63371,23 +63371,17 @@ date
 frames
 are
 dropped
-and
-the
-video
-playback
-#
-stalls
 .
 The
 dropped
 frame
 count
+#
 is
 reported
 to
 content
 in
-#
 VideoPlaybackQuality
 metrics
 .
