Bug 1846041 - Switch Searchfox builds to Rust 1.82-beta.5. r=glandium
Support for indexing vendored Rust crates was introduced in
rust-analyzer 2024-08-12 and is currently only available in the
1.82 beta and nightly toolchains.

We can revert this once 1.82 hits stable.

Differential Revision: https://phabricator.services.mozilla.com/D221466

UltraBlame original commit: 1e2bba8c4f633cf41da68dcd6783cc72788ea559

--- a/taskcluster/kinds/searchfox/kind.yml
+++ b/taskcluster/kinds/searchfox/kind.yml
@@ -327,6 +327,8 @@ linux64
 -
 rust
 -
+searchfox
+-
 linux64
 -
 cbindgen
@@ -506,7 +508,7 @@ linux64
 -
 rust
 -
-cross
+searchfox
 -
 linux64
 -
@@ -710,7 +712,7 @@ linux64
 -
 rust
 -
-cross
+searchfox
 -
 linux64
 -
@@ -893,7 +895,7 @@ linux64
 -
 rust
 -
-ios
+searchfox
 -
 linux64
 -
@@ -1066,7 +1068,7 @@ linux64
 -
 rust
 -
-cross
+searchfox
 -
 linux64
 -
@@ -1346,7 +1348,7 @@ linux64
 -
 rust
 -
-cross
+searchfox
 -
 linux64
 -
