Bug 1922369 - Adapt test_softblocked.js and test_blocklist_severities.js blocklist tests to run with blocklist v3 soft-blocks. r=robwu
Depends on D222101

Differential Revision: https://phabricator.services.mozilla.com/D224374

UltraBlame original commit: 1d3e4ac878d678213132c55c38c367c3cf425c02

--- a/toolkit/mozapps/extensions/test/xpcshell/rs-blocklist/xpcshell.toml
+++ b/toolkit/mozapps/extensions/test/xpcshell/rs-blocklist/xpcshell.toml
@@ -289,6 +289,13 @@ js
 ]
 [
 "
+test_blocklist_severities_v2
+.
+js
+"
+]
+[
+"
 test_blocklist_statechange_telemetry
 .
 js
@@ -626,6 +633,13 @@ true
 [
 "
 test_softblocked
+.
+js
+"
+]
+[
+"
+test_softblocked_v2
 .
 js
 "
