Bug 1922444 - Update yaml parsing to consider arch for Snap Upstream build r=releng-reviewers,taskgraph-reviewers,jcristau
Upstream merged
https://github.com/canonical/firefox-snap/commit/ea9d0c87657e035fcfbafc1e5c1d22a083d601ea
that introduces platform-specific package handling, the code used to
install package from the snapcraft definition needs to know to handle
those.

Differential Revision: https://phabricator.services.mozilla.com/D189376

UltraBlame original commit: f465486c8931c4d587faa419d34a6437109725e6

--- a/taskcluster/kinds/snap-upstream-build/kind.yml
+++ b/taskcluster/kinds/snap-upstream-build/kind.yml
@@ -265,6 +265,7 @@ run
 .
 sh
 nightly
+amd64
 treeherder
 :
 platform
@@ -370,7 +371,10 @@ run
 .
 sh
 nightly
-1
+amd64
+-
+-
+debug
 treeherder
 :
 platform
@@ -471,6 +475,7 @@ run
 .
 sh
 beta
+amd64
 treeherder
 :
 platform
@@ -576,7 +581,10 @@ run
 .
 sh
 beta
-1
+amd64
+-
+-
+debug
 treeherder
 :
 platform
@@ -677,6 +685,7 @@ run
 .
 sh
 stable
+amd64
 treeherder
 :
 platform
@@ -782,7 +791,10 @@ run
 .
 sh
 stable
-1
+amd64
+-
+-
+debug
 treeherder
 :
 platform
@@ -883,6 +895,7 @@ run
 .
 sh
 esr
+amd64
 treeherder
 :
 platform
@@ -988,7 +1001,10 @@ run
 .
 sh
 esr
-1
+amd64
+-
+-
+debug
 treeherder
 :
 platform
@@ -1304,6 +1320,7 @@ run
 .
 sh
 try
+amd64
 treeherder
 :
 platform
@@ -1412,7 +1429,10 @@ run
 .
 sh
 try
-1
+amd64
+-
+-
+debug
 treeherder
 :
 platform
