--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -49998,6 +49998,38 @@ set_spidermonkey_pref
 :
 startup
 #
+Experimental
+support
+for
+Math
+.
+sumPrecise
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+math_sumprecise
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
 endif
 /
 /
