Bug 1916274 - Improve nimbus chatbot behaviors, e.g., rollout and slugs r=tarek
Fix experiment vs rollout priority. Save full slug. Init on import no longer need test uninit. Enforce minimum versions.

Differential Revision: https://phabricator.services.mozilla.com/D223937

UltraBlame original commit: d3e1be4d1ed8af5783e18da931d3edf4685ff29e

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -22948,6 +22948,19 @@ hasExposure
 false
 variables
 :
+minVersion
+:
+type
+:
+string
+description
+:
+Minimum
+Firefox
+version
+to
+apply
+prefs
 prefs
 :
 type
