Bug 1922316 - Only set sidebar nimbus prefs with a minVersion check r=sidebar-reviewers,sclements,Gijs
Add minVersion feature variable to check against current firefox version.

Differential Revision: https://phabricator.services.mozilla.com/D224356

UltraBlame original commit: 542c9391430f18c763c9725cc961c79a09c6e383

--- a/toolkit/components/nimbus/FeatureManifest.yaml
+++ b/toolkit/components/nimbus/FeatureManifest.yaml
@@ -23025,6 +23025,19 @@ hasExposure
 false
 variables
 :
+minVersion
+:
+type
+:
+string
+description
+:
+Minimum
+Firefox
+version
+to
+apply
+prefs
 main
 .
 tools
