Bug 1921806 - Add test model for Perf Test r=tarek,sparky
Differential Revision: https://phabricator.services.mozilla.com/D224133

UltraBlame original commit: fca55a58b6867b9f9c8f42aa67c9de3beac38e5d

--- a/taskcluster/kinds/fetch/onnxruntime-web-fetch.yml
+++ b/taskcluster/kinds/fetch/onnxruntime-web-fetch.yml
@@ -294,3 +294,45 @@ sha256
 size
 :
 11105821
+xenova
+.
+all
+-
+minilm
+-
+l6
+-
+v2
+:
+description
+:
+feature
+extraction
+model
+fetch
+:
+type
+:
+git
+repo
+:
+https
+:
+/
+/
+huggingface
+.
+co
+/
+Xenova
+/
+all
+-
+MiniLM
+-
+L6
+-
+v2
+revision
+:
+cb3d680149bf9a3209564e1b27ab3bb355b65707
