Bug 1911639 - Record Suggest metrics, r=adw
Differential Revision: https://phabricator.services.mozilla.com/D224162

UltraBlame original commit: ba03fbbe15cf6425461a4e10dbf427641af38198

--- a/browser/components/urlbar/tests/quicksuggest/browser/browser.toml
+++ b/browser/components/urlbar/tests/quicksuggest/browser/browser.toml
@@ -339,6 +339,20 @@ telemetry
 "
 [
 "
+browser_telemetry_suggestMetrics
+.
+js
+"
+]
+tags
+=
+"
+search
+-
+telemetry
+"
+[
+"
 browser_telemetry_weather
 .
 js
