Bug 1905331 - Add test for findbar sound, r=NeilDeakin,pdfjs-reviewers,robwu
Add `MockSound` to replace nsISound in test. Allow us to track play
calls by additional exposed `played` array.

Add `resetSound` to FinderSound module, this is mainly for tests to
clear the internal gSound cache and ensure MockSound can mock it.

Differential Revision: https://phabricator.services.mozilla.com/D215306

UltraBlame original commit: e495bf9b0749b9da24ac8afcd586b0ef694a7d8e

--- a/toolkit/modules/tests/browser/browser.toml
+++ b/toolkit/modules/tests/browser/browser.toml
@@ -160,6 +160,13 @@ re
 enabling
 [
 "
+browser_FinderSound
+.
+js
+"
+]
+[
+"
 browser_Finder_hidden_textarea
 .
 js
@@ -292,6 +299,13 @@ js
 [
 "
 browser_Finder_skip_invisible_and_option
+.
+js
+"
+]
+[
+"
+browser_Finder_sound
 .
 js
 "
