Bug 1911163 - Add browser/base/content/test/webextensions/ to the webextensions try preset. r=willdurand
Depends on D224465

Differential Revision: https://phabricator.services.mozilla.com/D224466

UltraBlame original commit: 919650078b3758f1f326135b504e651e1799b9cb

--- a/tools/tryselect/try_presets.yml
+++ b/tools/tryselect/try_presets.yml
@@ -2934,6 +2934,17 @@ extensions
 test
 /
 -
+browser
+/
+base
+/
+content
+/
+test
+/
+webextensions
+/
+-
 mobile
 /
 shared
@@ -2981,6 +2992,17 @@ components
 extensions
 /
 test
+/
+-
+browser
+/
+base
+/
+content
+/
+test
+/
+webextensions
 /
 -
 mobile
