Bug 1921380 - Regenerate detekt baselines. r=android-reviewers,frontend-codestyle-reviewers,jonalmeida
Differential Revision: https://phabricator.services.mozilla.com/D223895

UltraBlame original commit: e36b1dd0cf8ad6a0ce8615c61f0c0f1b27143a8c

--- a/.prettierignore
+++ b/.prettierignore
@@ -15296,6 +15296,21 @@ android
 -
 components
 /
+config
+/
+detekt
+-
+baseline
+.
+xml
+mobile
+/
+android
+/
+android
+-
+components
+/
 gradle
 /
 wrapper
@@ -15380,6 +15395,19 @@ android
 /
 fenix
 /
+config
+/
+detekt
+-
+baseline
+.
+xml
+mobile
+/
+android
+/
+fenix
+/
 gradle
 /
 wrapper
@@ -15411,6 +15439,21 @@ gradle
 /
 wrapper
 /
+mobile
+/
+android
+/
+focus
+-
+android
+/
+quality
+/
+detekt
+-
+baseline
+.
+xml
 mobile
 /
 locales
