--- a/mobile/android/android-components/build.gradle
+++ b/mobile/android/android-components/build.gradle
@@ -1884,8 +1884,9 @@ detekt
 rules
 should
 be
-build
+built
 before
+.
 /
 /
 See
@@ -1893,17 +1894,15 @@ https
 :
 /
 /
-arturbosch
-.
-github
-.
-io
-/
 detekt
+.
+dev
+/
+docs
+/
+introduction
 /
 extensions
-.
-html
 #
 pitfalls
 dependsOn
@@ -1936,6 +1935,36 @@ exclude
 *
 *
 /
+build
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+docs
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+resources
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
 src
 /
 androidTest
@@ -1962,6 +1991,22 @@ exclude
 /
 src
 /
+main
+/
+assets
+/
+extensions
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+src
+/
 test
 /
 *
@@ -1975,26 +2020,6 @@ exclude
 test
 /
 src
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-build
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-resources
 /
 *
 *
@@ -2017,48 +2042,8 @@ exclude
 tooling
 /
 fetch
-/
-tests
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-tooling
-/
-fetch
 -
 tests
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-src
-/
-main
-/
-assets
-/
-extensions
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-docs
 /
 *
 *
@@ -2086,41 +2071,130 @@ configureEach
 (
 )
 {
+dependsOn
+(
+"
+:
+browser
+-
+icons
+:
+updateBuiltInExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+feature
+-
+accounts
+:
+updateBuiltInExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+feature
+-
+readerview
+:
+updateBuiltInExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+feature
+-
+search
+:
+updateAdsExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+feature
+-
+search
+:
+updateCookiesExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+samples
+-
+browser
+:
+updateBorderifyExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+samples
+-
+browser
+:
+updateTestExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+samples
+-
+compose
+-
+browser
+:
+updateBorderifyExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+samples
+-
+compose
+-
+browser
+:
+updateTestExtensionVersion
+"
+)
+dependsOn
+(
+"
+:
+tooling
+-
+detekt
+:
+assemble
+"
+)
 exclude
 "
 *
 *
 /
-src
-/
-androidTest
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-src
-/
-test
-/
-*
-*
-"
-exclude
-"
-*
-*
-/
-test
-/
-src
-/
-*
-*
+build
+.
+gradle
+.
+kts
 "
 exclude
 "
@@ -2128,6 +2202,16 @@ exclude
 *
 /
 build
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+docs
 /
 *
 *
@@ -2147,7 +2231,9 @@ exclude
 *
 *
 /
-tmp
+src
+/
+androidTest
 /
 *
 *
@@ -2157,11 +2243,59 @@ exclude
 *
 *
 /
-tooling
+src
 /
-fetch
+iosTest
 /
-tests
+*
+*
+"
+exclude
+"
+*
+*
+/
+src
+/
+main
+/
+assets
+/
+extensions
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+src
+/
+test
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+test
+/
+src
+/
+*
+*
+"
+exclude
+"
+*
+*
+/
+tmp
 /
 *
 *
