Bug 1918798 - Migrate MockK to the AC dependencies plugin. r=android-reviewers,mcarare
Differential Revision: https://phabricator.services.mozilla.com/D222190

UltraBlame original commit: 94b8fa057f500ec79106effb1a959754cc95569b

--- a/mobile/android/fenix/app/build.gradle
+++ b/mobile/android/fenix/app/build.gradle
@@ -7227,13 +7227,13 @@ rusthttp
 '
 )
 androidTestImplementation
-FenixDependencies
+ComponentsDependencies
 .
-mockk_android
+testing_mockk_android
 testImplementation
-FenixDependencies
+ComponentsDependencies
 .
-mockk
+testing_mockk
 /
 /
 For
