Bug 1918799 - Migrate Falcon & Fastlane to the AC dependencies plugin. r=android-reviewers,mcarare
Differential Revision: https://phabricator.services.mozilla.com/D222191

UltraBlame original commit: c631cb060a8d5e7dfb290f23bc07b6edac46d24d

--- a/mobile/android/fenix/app/build.gradle
+++ b/mobile/android/fenix/app/build.gradle
@@ -7075,27 +7075,13 @@ otherwise
 }
 }
 androidTestImplementation
-FenixDependencies
+ComponentsDependencies
 .
-fastlane
-/
-/
-This
-Falcon
-version
-is
-added
-to
-maven
-central
-now
-required
-for
-Screengrab
+testing_fastlane
 androidTestImplementation
-FenixDependencies
+ComponentsDependencies
 .
-falcon
+testing_falcon
 androidTestImplementation
 (
 ComponentsDependencies
