--- a/mobile/android/focus-android/app/build.gradle
+++ b/mobile/android/focus-android/app/build.gradle
@@ -2477,18 +2477,13 @@ okhttp
 '
 )
 androidTestImplementation
-FocusDependencies
+ComponentsDependencies
 .
-fastlane
+testing_fastlane
 androidTestImplementation
-FocusDependencies
+ComponentsDependencies
 .
-falcon
-/
-/
-Required
-by
-fastlane
+testing_falcon
 constraints
 {
 implementation
