Bug 1918798 - Block MockK from being used in AC projects. r=android-reviewers,petru
Differential Revision: https://phabricator.services.mozilla.com/D223055

UltraBlame original commit: 07ef0da1cd7e48ec0e5d009b6dc5ff50ed1feda7

--- a/mobile/android/android-components/build.gradle
+++ b/mobile/android/android-components/build.gradle
@@ -328,6 +328,37 @@ allWarningsAsErrors
 =
 true
 }
+/
+/
+Prevent
+some
+dependencies
+from
+being
+used
+in
+AC
+.
+project
+.
+configurations
+.
+all
+{
+exclude
+group
+:
+'
+io
+.
+mockk
+'
+module
+:
+'
+mockk
+'
+}
 project
 .
 configurations
