Bug 1919556 - FS: Add a pref for testing; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D220514

UltraBlame original commit: 960767ec059a68549c98a436b1d3d5982eceb7bd

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -26126,6 +26126,34 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+enable
+testing
+features
+.
+-
+name
+:
+dom
+.
+fs
+.
+testing
+type
+:
+SequentiallyConsistentAtomicBool
+value
+:
+false
+mirror
+:
+always
+#
 LocalStorage
 data
 limit
