Bug 1919556 - FS: Add support for pausing QM IO thread after finishing database initialization; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D220516

UltraBlame original commit: a01a0de91d7216b06b8ed3782cadb829e7acbd6b

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -26154,6 +26154,40 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+slow
+down
+database
+initialization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+fs
+.
+databaseInitialization
+.
+pauseOnIOThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
 LocalStorage
 data
 limit
