Bug 1919556 - Add a test for origin clearing requested right after starting database work for FS; r=dom-storage-reviewers,jari
Differential Revision: https://phabricator.services.mozilla.com/D220916

UltraBlame original commit: 434b26eeb6e9e6ec62af81cf2cc9e4088ed44813

--- a/dom/fs/test/xpcshell/xpcshell.toml
+++ b/dom/fs/test/xpcshell/xpcshell.toml
@@ -52,6 +52,22 @@ js
 ]
 [
 "
+test_slowDatabaseInitialization
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+true
+"
+]
+[
+"
 test_slowStorageInitialization
 .
 js
