--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -69585,6 +69585,75 @@ mirror
 :
 always
 #
+Turns
+on
+legacy
+(
+non
+-
+spec
+)
+exposure
+of
+camera
+and
+microphone
+information
+#
+from
+enumerateDevices
+and
+devicechange
+ahead
+of
+successful
+getUserMedia
+#
+calls
+only
+for
+certain
+domains
+(
+ignored
+if
+above
+pref
+is
+true
+)
+.
+-
+name
+:
+media
+.
+devices
+.
+enumerate
+.
+legacy
+.
+allowlist
+type
+:
+String
+value
+:
+"
+slack
+.
+com
+*
+.
+slack
+.
+com
+"
+mirror
+:
+never
+#
 WebRTC
 prefs
 follow
