Bug 1908056 - Split out separate test_enumerateDevices_legacy_allowlist.html test. r=dbaker
Depends on D224367

Differential Revision: https://phabricator.services.mozilla.com/D224552

UltraBlame original commit: 8148172860d2674e4de97479477777ce5bb737d9

--- a/dom/media/webrtc/tests/mochitests/mochitest.toml
+++ b/dom/media/webrtc/tests/mochitests/mochitest.toml
@@ -323,6 +323,35 @@ test_enumerateDevices_legacy
 html
 "
 ]
+support
+-
+files
+=
+[
+"
+testLegacyEnumerateDevices
+.
+js
+"
+]
+[
+"
+test_enumerateDevices_legacy_allowlist
+.
+html
+"
+]
+support
+-
+files
+=
+[
+"
+testLegacyEnumerateDevices
+.
+js
+"
+]
 [
 "
 test_enumerateDevices_navigation
