Bug 1908258 - part1 : delay audio wakelock releasing. r=padenot
Currently, our audio wakelock is precisely synchronized with audible
sound, meaning no wakelock is held when the audio is muted or silent.

On Windows, once the sleeping timer's threshold is reached, the system
appears to enter sleep mode immediately after the audio wakelock is
released. This timing issue prevents a playlist web application from
playing the next song, as the system falls asleep right after the first
song ends.

To address this, we consider delaying the release of the audio wakelock
slightly. This adjustment would allow the next song in the playlist to
start playing and prevent the system from entering sleep mode during
extended silences, which are common at the end of songs.

Differential Revision: https://phabricator.services.mozilla.com/D218356

UltraBlame original commit: c191ec72d15bd84a68cc9e99410587b39307c933

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -67237,6 +67237,42 @@ mirror
 :
 always
 #
+The
+delay
+time
+(
+ms
+)
+before
+releasing
+an
+audio
+wakelock
+.
+-
+name
+:
+media
+.
+wakelock
+.
+audio
+.
+delay
+-
+releasing
+.
+ms
+type
+:
+RelaxedAtomicUint32
+value
+:
+10000
+mirror
+:
+always
+#
 When
 video
 continues
