Bug 1922351 - Move ffi serde serialization from Servo into somewhere usable by other crates in the tree. r=nika
Differential Revision: https://phabricator.services.mozilla.com/D224394

UltraBlame original commit: 4dc792519bbcef7254a49bbe6592363c696ba83c

--- a/servo/ports/geckolib/Cargo.toml
+++ b/servo/ports/geckolib/Cargo.toml
@@ -34,6 +34,11 @@ MPL
 .
 0
 "
+edition
+=
+"
+2021
+"
 [
 lib
 ]
@@ -90,13 +95,6 @@ atomic_refcell
 .
 1
 "
-bincode
-=
-"
-1
-.
-0
-"
 cssparser
 =
 "
@@ -131,6 +129,28 @@ dom
 base
 /
 rust
+"
+}
+ipdl_utils
+=
+{
+path
+=
+"
+.
+.
+/
+.
+.
+/
+.
+.
+/
+ipc
+/
+rust
+/
+ipdl_utils
 "
 }
 gecko
