Bug 1919788 - LSNG: Add support for pausing DOM File thread during request finalization; r=dom-storage-reviewers,asuth
Differential Revision: https://phabricator.services.mozilla.com/D222460

UltraBlame original commit: 3c5ff4e4053e6dd772c01046791b380153de45c5

--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -26765,6 +26765,40 @@ mirror
 :
 always
 #
+A
+pref
+that
+is
+used
+to
+slow
+down
+request
+finalization
+for
+testing
+purposes
+.
+-
+name
+:
+dom
+.
+storage
+.
+requestFinalization
+.
+pauseOnDOMFileThreadMs
+type
+:
+RelaxedAtomicUint32
+value
+:
+0
+mirror
+:
+always
+#
 For
 area
 and
