Bug 1919788 - Add a test for origin clearing requested right after starting request finalization for LSNG; r=dom-storage-reviewers,asuth
Differential Revision: https://phabricator.services.mozilla.com/D222461

UltraBlame original commit: a51dc1d5b85714839d2cbda82f74e38fc6b9ec93

--- a/dom/localstorage/test/unit/xpcshell.toml
+++ b/dom/localstorage/test/unit/xpcshell.toml
@@ -59,6 +59,11 @@ slowDatabaseInitialization_child
 js
 "
 "
+slowRequestFinalization_child
+.
+js
+"
+"
 somedata_profile
 .
 zip
@@ -520,6 +525,22 @@ js
 test_slowDatabaseInitialization
 .
 js
+"
+]
+[
+"
+test_slowRequestFinalization
+.
+js
+"
+]
+skip
+-
+if
+=
+[
+"
+true
 "
 ]
 [
