--- a/browser/components/screenshots/tests/browser/browser.toml
+++ b/browser/components/screenshots/tests/browser/browser.toml
@@ -146,7 +146,89 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+2009
+'
+&
+&
+processor
+=
+=
+'
+x86
+'
+&
+&
+opt
+"
+#
+Bug
+1879673
+"
+os
+=
+=
+'
+win
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+2009
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
+"
+#
+Bug
+1879673
 ]
 [
 "
