Bug 1922146 - Adjust xpcshell skip-if conditions for mac to include os_version/processor. r=aryx,necko-reviewers,anti-tracking-reviewers,kershaw,bvandersloot
Differential Revision: https://phabricator.services.mozilla.com/D224269

UltraBlame original commit: 52d7cc0228ec8fbd03ae0d0376f23a938aeffe61

--- a/extensions/permissions/test/unit/xpcshell.toml
+++ b/extensions/permissions/test/unit/xpcshell.toml
@@ -289,7 +289,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
