--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common-e10s.toml
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common-e10s.toml
@@ -45,7 +45,30 @@ android
 debug
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
@@ -148,7 +171,30 @@ tsan
 Bug
 1683730
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
