--- a/toolkit/components/extensions/test/xpcshell/xpcshell-common.toml
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-common.toml
@@ -532,14 +532,60 @@ mac
 '
 &
 &
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
 "
 #
-macosx1014
-/
+Bug
+1564534
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
 debug
-due
-to
+"
+#
+Bug
 1564534
 ]
 run
@@ -611,14 +657,60 @@ mac
 '
 &
 &
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
 "
 #
-macosx1014
-/
+Bug
+1564534
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
 debug
-due
-to
+"
+#
+Bug
 1564534
 ]
 run
@@ -725,7 +817,30 @@ tsan
 Bug
 1683730
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
@@ -773,7 +888,30 @@ tsan
 Bug
 1683730
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
@@ -860,6 +998,56 @@ os
 =
 '
 mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+debug
+"
+#
+Bug
+1762638
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
 '
 &
 &
@@ -1084,7 +1272,30 @@ thunderbird
 '
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
@@ -2662,10 +2873,57 @@ mac
 '
 &
 &
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
+"
+#
+Bug
+1762638
+"
+os
+=
+=
+'
+mac
+'
 &
 &
-fission
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+debug
 "
 #
 Bug
