--- a/devtools/server/tests/xpcshell/xpcshell.toml
+++ b/devtools/server/tests/xpcshell/xpcshell.toml
@@ -2243,7 +2243,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 #
