--- a/security/manager/ssl/tests/unit/xpcshell.toml
+++ b/security/manager/ssl/tests/unit/xpcshell.toml
@@ -1568,7 +1568,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 #
@@ -1615,7 +1638,7 @@ in
 #
 automation
 .
-skip
+run
 -
 if
 =
@@ -1625,7 +1648,7 @@ os
 =
 =
 '
-win
+android
 '
 "
 "
@@ -1633,7 +1656,7 @@ os
 =
 =
 '
-mac
+linux
 '
 "
 ]
