--- a/toolkit/components/antitracking/test/xpcshell/xpcshell.toml
+++ b/toolkit/components/antitracking/test/xpcshell/xpcshell.toml
@@ -233,21 +233,66 @@ debug
 Bug
 1760086
 "
-apple_silicon
-"
-#
-bug
-1729551
-"
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
 1652119
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+Bug
+1729551
 "
 win10_2009
 &
