--- a/toolkit/components/extensions/test/xpcshell/native_messaging.toml
+++ b/toolkit/components/extensions/test/xpcshell/native_messaging.toml
@@ -76,7 +76,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 #
