--- a/toolkit/components/extensions/test/xpcshell/xpcshell-content.toml
+++ b/toolkit/components/extensions/test/xpcshell/xpcshell-content.toml
@@ -548,24 +548,62 @@ mac
 '
 &
 &
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
 debug
-&
-&
-fission
 "
 #
 Bug
 1762638
 "
-(
-socketprocess_networking
-|
-|
-fission
-)
+os
+=
+=
+'
+mac
+'
 &
 &
-(
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+debug
+"
+#
+Bug
+1762638
+"
 os
 =
 =
@@ -575,7 +613,26 @@ linux
 &
 &
 debug
-)
+&
+&
+socketprocess_networking
+"
+#
+Bug
+1759035
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+debug
+&
+&
+fission
 "
 #
 Bug
@@ -654,7 +711,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 Disabled
