--- a/toolkit/components/taskscheduler/tests/xpcshell/xpcshell.toml
+++ b/toolkit/components/taskscheduler/tests/xpcshell/xpcshell.toml
@@ -19,17 +19,63 @@ if
 =
 [
 "
-apple_silicon
-"
-#
-bug
-1707753
-"
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
 1713329
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+Bug
+1707753
 ]
 [
 "
@@ -63,17 +109,63 @@ if
 =
 [
 "
-apple_silicon
-"
-#
-bug
-1707753
-"
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 Bug
 1713329
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+Bug
+1707753
 ]
 [
 "
