--- a/toolkit/modules/tests/xpcshell/xpcshell.toml
+++ b/toolkit/modules/tests/xpcshell/xpcshell.toml
@@ -209,13 +209,61 @@ os
 '
 mac
 '
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 osx
 :
 Bug
 1550141
-;
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+"
+#
+osx
+:
+Bug
+1550141
 ]
 [
 "
@@ -648,7 +696,30 @@ if
 =
 [
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 #
