no bug - mots: 'Application Startup' move Nathan in Emeritus r=zeid DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D224443

UltraBlame original commit: 7834177f48a8f2f1b1c58a799418272d38323aae

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-02T16
+03T08
 :
-01
+17
 :
-22
+40
 .
-525107
+248312
 +
 00
 :
@@ -18169,16 +18169,14 @@ xre
 *
 /
 *
-meta
-:
-{
-}
 owners
 :
 -
 *
 mossop
-peers
+meta
+:
+peers_emeritus
 :
 -
 *
@@ -19078,7 +19076,7 @@ hashes
 :
 config
 :
-d230aac53a99098a219aff7776a1eb269ff6fa26
+a6a7a8823e67e62d8df73e6f68b5421f0c9ff65f
 export
 :
-8879d093cdfcf74d478a2af9a135791b625ca5fd
+9ca8b3d4e1ab12713bf13df06cc1e18d2ba459b3
