Bug 1915571 - Move mac and windows clang stage 2 build to cross-compiles. r=firefox-build-system-reviewers,sergesanspaille
By doing so, we don't really need a stage 1 clang for mac and windows
(with the downside that the final PGOed clang becomes the
clang-toolchain artifact on those platforms), and cross-compiling stage
2 is much faster as a cross-compile, leaving only stage 3 to be native.

While here, for the one build type that still does stage 2 and 3 in one
task, we actually prefer taking the llvm-profdata from stage 1, as it
doesn't contain profile instrumentation (it should actually have been
this way since the beginning).

Differential Revision: https://phabricator.services.mozilla.com/D220654

UltraBlame original commit: 59e8c599447c552990f0850881f881c9f79050ff

--- a/taskcluster/kinds/toolchain/clang.yml
+++ b/taskcluster/kinds/toolchain/clang.yml
@@ -1382,7 +1382,13 @@ build
 -
 clang
 /
-profile
+stage
+-
+2
+-
+3
+-
+pgo
 .
 json
 '
@@ -1426,7 +1432,13 @@ build
 -
 clang
 /
-profile
+stage
+-
+2
+-
+3
+-
+pgo
 .
 json
 '
@@ -1922,7 +1934,7 @@ clang
 -
 18
 -
-stage1
+stage2
 :
 description
 :
@@ -1942,7 +1954,7 @@ clang
 -
 18
 -
-stage1
+stage2
 )
 run
 :
@@ -2012,7 +2024,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -2070,7 +2084,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -2105,6 +2121,16 @@ clang
 18
 -
 stage1
+-
+macosx64
+-
+x64
+-
+compiler
+-
+rt
+-
+18
 -
 macosx64
 -
@@ -2223,7 +2249,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -2279,7 +2309,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -2319,17 +2353,7 @@ clang
 -
 18
 -
-stage1
--
-macosx64
--
-x64
--
-compiler
--
-rt
--
-18
+stage2
 -
 macosx64
 -
@@ -2840,7 +2864,7 @@ clang
 -
 18
 -
-stage1
+stage2
 :
 description
 :
@@ -2860,7 +2884,7 @@ clang
 -
 18
 -
-stage1
+stage2
 )
 run
 :
@@ -2932,7 +2956,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -2992,7 +3018,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -3027,6 +3055,16 @@ clang
 18
 -
 stage1
+-
+macosx64
+-
+aarch64
+-
+compiler
+-
+rt
+-
+18
 -
 macosx64
 -
@@ -3149,7 +3187,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -3207,7 +3249,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -3249,17 +3295,7 @@ clang
 -
 18
 -
-stage1
--
-macosx64
--
-aarch64
--
-compiler
--
-rt
--
-18
+stage2
 -
 macosx64
 -
@@ -3775,7 +3811,7 @@ clang
 -
 18
 -
-stage1
+stage2
 :
 description
 :
@@ -3786,8 +3822,6 @@ cl
 18
 toolchain
 build
-stage
-1
 "
 treeherder
 :
@@ -3799,7 +3833,7 @@ clang
 -
 18
 -
-stage1
+stage2
 )
 run
 :
@@ -3866,7 +3900,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -3926,28 +3962,12 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
-toolchain
--
-alias
-:
-by
--
-project
-:
-toolchains
-:
-null
-default
-:
-win64
--
-clang
--
-toolchain
 toolchain
 -
 artifact
@@ -3983,6 +4003,14 @@ stage1
 vs
 -
 toolchain
+-
+win64
+-
+compiler
+-
+rt
+-
+18
 -
 win64
 -
@@ -4096,7 +4124,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -4154,7 +4186,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -4190,19 +4226,11 @@ clang
 -
 18
 -
-stage1
+stage2
 -
 win64
 -
 cmake
--
-win64
--
-compiler
--
-rt
--
-18
 -
 vs
 -
@@ -4530,9 +4558,16 @@ toolchains
 null
 default
 :
+-
 win64
 -
 clang
+-
+win64
+-
+clang
+-
+toolchain
 toolchain
 -
 artifact
@@ -5800,7 +5835,13 @@ build
 -
 clang
 /
-profile
+stage
+-
+2
+-
+3
+-
+pgo
 .
 json
 '
@@ -5844,7 +5885,13 @@ build
 -
 clang
 /
-profile
+stage
+-
+2
+-
+3
+-
+pgo
 .
 json
 '
@@ -6343,7 +6390,7 @@ clang
 -
 trunk
 -
-stage1
+stage2
 :
 description
 :
@@ -6368,7 +6415,7 @@ clang
 -
 trunk
 -
-stage1
+stage2
 )
 run
 :
@@ -6438,7 +6485,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -6496,7 +6545,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -6531,6 +6582,16 @@ clang
 trunk
 -
 stage1
+-
+macosx64
+-
+x64
+-
+compiler
+-
+rt
+-
+trunk
 -
 macosx64
 -
@@ -6654,7 +6715,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -6710,7 +6775,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -6750,17 +6819,7 @@ clang
 -
 trunk
 -
-stage1
--
-macosx64
--
-x64
--
-compiler
--
-rt
--
-trunk
+stage2
 -
 macosx64
 -
@@ -7274,7 +7333,7 @@ clang
 -
 trunk
 -
-stage1
+stage2
 :
 description
 :
@@ -7299,7 +7358,7 @@ clang
 -
 trunk
 -
-stage1
+stage2
 )
 run
 :
@@ -7371,7 +7430,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -7431,7 +7492,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -7466,6 +7529,16 @@ clang
 trunk
 -
 stage1
+-
+macosx64
+-
+aarch64
+-
+compiler
+-
+rt
+-
+trunk
 -
 macosx64
 -
@@ -7593,7 +7666,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -7651,7 +7728,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -7693,17 +7774,7 @@ clang
 -
 trunk
 -
-stage1
--
-macosx64
--
-aarch64
--
-compiler
--
-rt
--
-trunk
+stage2
 -
 macosx64
 -
@@ -8222,7 +8293,7 @@ clang
 -
 trunk
 -
-stage1
+stage2
 :
 description
 :
@@ -8233,8 +8304,6 @@ cl
 trunk
 toolchain
 build
-stage
-1
 "
 attributes
 :
@@ -8251,7 +8320,7 @@ clang
 -
 trunk
 -
-stage1
+stage2
 )
 run
 :
@@ -8318,7 +8387,9 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
@@ -8378,28 +8449,12 @@ clang
 /
 stage
 -
-1
+2
+-
+pgo
 .
 json
 '
-toolchain
--
-alias
-:
-by
--
-project
-:
-toolchains
-:
-win64
--
-clang
--
-toolchain
-default
-:
-null
 toolchain
 -
 artifact
@@ -8435,6 +8490,14 @@ stage1
 vs
 -
 toolchain
+-
+win64
+-
+compiler
+-
+rt
+-
+trunk
 -
 win64
 -
@@ -8553,7 +8616,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -8611,7 +8678,11 @@ build
 -
 clang
 /
-profile
+stage
+-
+3
+-
+pgo
 .
 json
 '
@@ -8647,19 +8718,11 @@ clang
 -
 trunk
 -
-stage1
+stage2
 -
 win64
 -
 cmake
--
-win64
--
-compiler
--
-rt
--
-trunk
 -
 vs
 -
@@ -8959,9 +9022,16 @@ project
 :
 toolchains
 :
+-
 win64
 -
 clang
+-
+win64
+-
+clang
+-
+toolchain
 default
 :
 null
