Bug 1921401 - Adjust wpt webcodecs 'temporal-svc-encoding.https.any.worker.html?vp8/9' further. r=padenot DONTBUILD
Differential Revision: https://phabricator.services.mozilla.com/D224387

UltraBlame original commit: af809f81f22c9a87465666580b6c633523aded52

--- a/testing/web-platform/meta/webcodecs/temporal-svc-encoding.https.any.js.ini
+++ b/testing/web-platform/meta/webcodecs/temporal-svc-encoding.https.any.js.ini
@@ -65,6 +65,20 @@ html
 ?
 vp9
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+ccov
+:
+ERROR
+OK
 disabled
 :
 if
@@ -136,6 +150,20 @@ html
 ?
 vp8
 ]
+expected
+:
+if
+os
+=
+=
+"
+win
+"
+and
+ccov
+:
+ERROR
+OK
 disabled
 :
 if
