Bug 1921982 - Add jswinarton as a peer for Tabbed Browser. r=zeid
Differential Revision: https://phabricator.services.mozilla.com/D224223

UltraBlame original commit: b5e4959e0bbc610a26357ff758a6d90590fe96d2

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-03T08
+05T13
 :
-17
+16
 :
-40
+08
 .
-248312
+987429
 +
 00
 :
@@ -2158,6 +2158,19 @@ Sudiaman
 nick
 :
 jsudiaman
+-
+&
+jswinarton
+bmo_id
+:
+699603
+name
+:
+Jeremy
+Swinarton
+nick
+:
+jswinarton
 -
 &
 jteow
@@ -16029,6 +16042,9 @@ dwalker
 -
 *
 niklas
+-
+*
+jswinarton
 machine_name
 :
 tabbed_browser
@@ -19076,7 +19092,7 @@ hashes
 :
 config
 :
-a6a7a8823e67e62d8df73e6f68b5421f0c9ff65f
+2e733439b1df731727cf34f2a9b75005bef3ff00
 export
 :
-9ca8b3d4e1ab12713bf13df06cc1e18d2ba459b3
+6f82081c80190cf2a4cea31ae3c0d3b1cbb0acf3
