Bug 1921554 - Generate gfx blocklist features/status/etc list to create downloadable blocklist bindings. r=bradwerth,jnicol
This patch turns the various nsIGfxInfo::FEATURE_* constants into macros
that can be included to generate C++ code at runtime. This has been done
to automatically generate the necessary bindings for the downloadable
blocklist. This way we will never miss adding the necessary
prerequisities as we have in the past.

Differential Revision: https://phabricator.services.mozilla.com/D224056

UltraBlame original commit: 473f8f033016345737ccfb6b118bb659294d1be2

--- a/toolkit/mozapps/extensions/test/xpcshell/rs-blocklist/xpcshell.toml
+++ b/toolkit/mozapps/extensions/test/xpcshell/rs-blocklist/xpcshell.toml
@@ -505,112 +505,112 @@ jsm
 l698
 [
 "
-test_gfxBlacklist_Device
+test_gfxBlocklist_Device
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_DriverNew
+test_gfxBlocklist_DriverNew
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_Equal_DriverNew
+test_gfxBlocklist_Equal_DriverNew
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_Equal_DriverOld
+test_gfxBlocklist_Equal_DriverOld
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_Equal_OK
+test_gfxBlocklist_Equal_OK
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_GTE_DriverOld
+test_gfxBlocklist_GTE_DriverOld
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_GTE_OK
+test_gfxBlocklist_GTE_OK
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_No_Comparison
+test_gfxBlocklist_No_Comparison
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_OK
+test_gfxBlocklist_OK
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_OS
+test_gfxBlocklist_OS
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_OSVersion_match
+test_gfxBlocklist_OSVersion_match
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_OSVersion_mismatch_DriverVersion
+test_gfxBlocklist_OSVersion_mismatch_DriverVersion
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_OSVersion_mismatch_OSVersion
+test_gfxBlocklist_OSVersion_mismatch_OSVersion
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_Vendor
+test_gfxBlocklist_Vendor
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_Version
+test_gfxBlocklist_Version
 .
 js
 "
 ]
 [
 "
-test_gfxBlacklist_prefs
+test_gfxBlocklist_prefs
 .
 js
 "
