--- a/tools/lint/rejected-words.yml
+++ b/tools/lint/rejected-words.yml
@@ -3124,277 +3124,7 @@ rs
 -
 blocklist
 /
-test_gfxBlacklist_Device
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_DriverNew
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_Equal_DriverNew
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_Equal_DriverOld
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_Equal_OK
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_GTE_DriverOld
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_GTE_OK
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_No_Comparison
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_OK
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_OS
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_OSVersion_match
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_OSVersion_mismatch_DriverVersion
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_OSVersion_mismatch_OSVersion
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_prefs
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_Vendor
-.
-js
--
-toolkit
-/
-mozapps
-/
-extensions
-/
-test
-/
-xpcshell
-/
-rs
--
-blocklist
-/
-test_gfxBlacklist_Version
+test_gfxBlocklist_prefs
 .
 js
 -
