Bug 1909396 - Remove HTTPS-Only exception button in iframes r=freddyb,fluent-reviewers
Rationale for this can be read in Bug 1909396, but the main reason is that the iframe will get blocked regardless by mixed content blocking.

Differential Revision: https://phabricator.services.mozilla.com/D220257

UltraBlame original commit: 7277e30f72bda8376a98782eb47c04857d311255

--- a/dom/security/test/https-only/browser.toml
+++ b/dom/security/test/https-only/browser.toml
@@ -148,6 +148,24 @@ html
 ]
 [
 "
+browser_iframe_buttons
+.
+js
+"
+]
+support
+-
+files
+=
+[
+"
+file_iframe_buttons
+.
+html
+"
+]
+[
+"
 browser_iframe_test
 .
 js
