Bug 1921480 - Make internalRedirectTo transparent r=kershaw,jdescottes,necko-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D224008

UltraBlame original commit: 4334a934970bd77d0bc2283ddbff6187c6610703

--- a/netwerk/test/unit/xpcshell.toml
+++ b/netwerk/test/unit/xpcshell.toml
@@ -5087,13 +5087,6 @@ js
 ]
 [
 "
-test_internal_redirect
-.
-js
-"
-]
-[
-"
 test_ioservice
 .
 js
@@ -6604,6 +6597,13 @@ js
 [
 "
 test_trackingProtection_annotateChannels
+.
+js
+"
+]
+[
+"
+test_transparent_redirect
 .
 js
 "
