--- a/modules/libpref/init/StaticPrefList.yaml
+++ b/modules/libpref/init/StaticPrefList.yaml
@@ -50126,6 +50126,38 @@ set_spidermonkey_pref
 :
 startup
 #
+Experimental
+support
+for
+Iterator
+.
+range
+in
+JavaScript
+.
+-
+name
+:
+javascript
+.
+options
+.
+experimental
+.
+iterator_range
+type
+:
+bool
+value
+:
+false
+mirror
+:
+always
+set_spidermonkey_pref
+:
+startup
+#
 endif
 /
 /
