Bug 1919628 - Improve CVNE test implementation and rename to shopify-applink-startup. r=perftest-reviewers,kshampur
This bug addresses a few small issues discovered upon initial merging:
- 50 runs is too much, 5 will suffice(done)
- enable android animations(done)
- close tabs, don't let them build up to 50(done - altered the test so it's consistent. 4 tabs are opened and then closed then the applink test is run)
- ensure video recording videos have timestamps(done)
- ensure replicates are there(done)
- change the testname to something more readable(done)

Differential Revision: https://phabricator.services.mozilla.com/D223143

UltraBlame original commit: b2ff88d7fa696821e55a48eda7eceb590b2a9c9f

--- a/taskcluster/kinds/perftest/android.yml
+++ b/taskcluster/kinds/perftest/android.yml
@@ -1655,13 +1655,11 @@ chrome
 -
 m
 -
-cold
+shopify
 -
-view
+applink
 -
-nav
--
-end
+startup
 :
 worker
 -
@@ -1693,14 +1691,14 @@ treeherder
 symbol
 :
 perftest
-(
-startup
 -
 chrome
+(
+shopify
 -
-m
+applink
 -
-cvne
+startup
 )
 tier
 :
@@ -1801,13 +1799,11 @@ startup
 -
 fenix
 -
-cold
+shopify
 -
-view
+applink
 -
-nav
--
-end
+startup
 :
 worker
 -
@@ -1839,12 +1835,14 @@ treeherder
 symbol
 :
 perftest
-(
-startup
 -
 fenix
+(
+shopify
 -
-cvne
+applink
+-
+startup
 )
 tier
 :
