--- a/toolkit/crashreporter/test/unit/xpcshell.toml
+++ b/toolkit/crashreporter/test/unit/xpcshell.toml
@@ -861,6 +861,32 @@ os_version
 =
 =
 '
+14
+.
+70
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
 11
 .
 20
