Bug 1922539: Update nodejs to 18 LTS in the Updatebot Docker image r=firefox-build-system-reviewers,ahochheiden
Differential Revision: https://phabricator.services.mozilla.com/D224550

UltraBlame original commit: b5cd11a9326667c0e2e70cd5dbaa8b829f3cd08c

--- a/taskcluster/docker/updatebot/Dockerfile
+++ b/taskcluster/docker/updatebot/Dockerfile
@@ -16,32 +16,14 @@ builds
 worker
 /
 checkouts
-#
-%
-include
-taskcluster
-/
-docker
-/
-recipes
-/
+COPY
 install
 -
 node
-.
-sh
-ADD
-topsrcdir
-/
-taskcluster
-/
-docker
-/
-recipes
-/
-install
 -
-node
+for
+-
+pdfjs
 .
 sh
 /
@@ -50,6 +32,10 @@ setup
 install
 -
 node
+-
+for
+-
+pdfjs
 .
 sh
 COPY
