Bug 1908418 - Add open tab groups to session store r=jswinarton,dao,sessionstore-reviewers
This adds tab groups and their state data to the session store. For any tabs that are in tab groups, this patch adds the group ID into the tab state.

This change has a number of limitations that will be addressed in future bugs. Most notably, tab groups will not be restored from session state -- this change just records the tab group state data. Another important limitation is that when users remove tab groups, they will no longer appear in the session store.

This patch is only intended to lay the initial groundwork for storing tab group data in the session store.

Differential Revision: https://phabricator.services.mozilla.com/D224348

UltraBlame original commit: 0ded63123e6c16329d53b591bbcdc4785125ccef

--- a/browser/components/sessionstore/test/browser.toml
+++ b/browser/components/sessionstore/test/browser.toml
@@ -1428,6 +1428,20 @@ js
 ]
 [
 "
+browser_tab_groups_empty
+.
+js
+"
+]
+[
+"
+browser_tab_groups_state
+.
+js
+"
+]
+[
+"
 browser_tab_label_during_restore
 .
 js
